@@ -1,11 +1,12 @@
 7.6.0
- - C++20 concept for binary data: `pqxx::binary`.
+ - Added C++20 concepts: `binary`, `char_string`, `char_strings`.
  - Generalise binary strings to any contiguous range of `std::byte`.
  - Mark `zview` as a view and as a borrowed range.
  - Save a copy step on string fields in `stream_to`.
  - New helper: `pqxx::value_type<CONTAINER>`.
  - Some escaping functions now have "into my buffer" variants.
  - More generic escaping functions, supporting more types of binary.
+ - In C++20, accept generic columns list for `stream_to`, even dynamic ones.
 7.5.2
  - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
 7.5.1
